[package]
name = "pool"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.0"
# For 2D applications:
avian2d = { git = "https://github.com/Jondolf/avian", branch = "main" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
